# django-iw

./: .env.example  .gitignore  Makefile  conftest.py  docker-compose.yml  make dev.mov  pyproject.toml  readme.md  readme.txt
.github/workflows/: ci.yml
src/: manage.py
src/apps/campaigns/: apps.py
src/apps/campaigns/api/v1/agency/: filters.py  serializers.py  urls.py  views.py
src/apps/strategies/: apps.py
src/apps/strategies/api/v1/agency/: urls.py  views.py
src/apps/strategies/api/v1/agency/serializers/: __init__.py  campaign.py  strategy.py
src/core/: models.py  urls.py
src/core/api/: views.py
src/core/factories/models/: campaign.py  strategy.py
src/core/fixtures/: api.py  factories.py
src/core/settings/: __init__.py
src/core/settings/components/: apps.py  db.py  drf.py  i18n.py  static.py  templates.py  timezone.py
src/core/testing/: api.py  factories.py
src/models/: apps.py
src/models/migrations/: 0001_add_campaign_model.py  0002_strategy.py
src/models/models/: __init__.py  campaign.py  strategy.py
tests/: test_ok.py
tests/api/v1/agency/campaigns/actions/: test_list.py
tests/api/v1/agency/campaigns/filters/: test_created.py
tests/api/v1/agency/strategies/actions/: test_list.py
tests/api/v1/campaigns/actions/: test_list.py
tests/api/v1/strategies/actions/: test_list.py
